--- a/prices.html
+++ b/prices.html
@@ -32,7 +32,7 @@
                         </div>
                         <p class="text-amber-800">
                             Áraink bruttó árak. Az élezendő eszközök átadási és átvételi pontja:
-                            Halásztelek, II. Rákóczi Ferenc út 54 (papírbolt).
+                            Halásztelek, II. Rákóczi Ferenc út 54/C (papírbolt).
                             <br><br>
                             Az élezést általában 24 órán belül, másnapra biztosítom.
                             Kérdéseit várjuk az elezes.halasztelek@gmail.com címen.
