--- a/prices.html
+++ b/prices.html
@@ -334,7 +334,7 @@
             <div class="price-category mb-12">
                 <h2 class="text-2xl font-bold text-primary mb-6 flex items-center gap-2">
                     <i data-feather="chevrons-down" class="text-amber-500"></i>
-                    Csigafúró élezés ( gépi, 118° vagy 130°, keresztél kikönnyítéssel)
+                    Csigafúró élezés ( gépi, 118° vagy 130°, keresztél kikönnyítéssel, fémfúró)
                 </h2>
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="price-item px-6 py-3">
@@ -376,7 +376,7 @@
             <div class="price-category mb-12">
                 <h2 class="text-2xl font-bold text-primary mb-6 flex items-center gap-2">
                     <i data-feather="chevrons-up" class="text-amber-500"></i>
-                    Új, kobaltos csigafúró ( 5% Co tartalmú, HSS M35 csigafúró)
+                    Új, kobaltos csigafúró ( 5% Co tartalmú, HSS M35 csigafúró, fémfúró)
                 </h2>
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="price-item px-6 py-3">
