--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="md:w-1/2">
-                <img src="images/elezes2.JPG" alt="Kés Élezés" class="rounded-xl shadow-xl">
+                <img id="valtozoKep" src="images/elezes2.JPG" alt="Kés Élezés" class="rounded-xl shadow-xl fade">
             </div>
         </section>
 
