PhoneBugFix_PhoneUIFix_PrettyURL

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                         </div>
                         <div>
                             <h3 class="font-semibold">Cím</h3>
-                            <p class="text-secondary">II. Rákóczi Ferenc út 54/C (papírbolt)<br>Halásztelek 2314</p>
+                            <p class="text-secondary">II. Rákóczi Ferenc út 54/C (papírbolt)<br>2314 Halásztelek</p>
                         </div>
                     </div>
                     <div class="flex items-start gap-4">
