--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <p class="text-secondary text-lg mb-8">Helyezze vissza pengéit korábbi dicsőségükbe szakértői élezési
                     szolgáltatásunkkal. Borotvaéles él garantálva.</p>
                 <div class="flex gap-4">
-                    <a href="prices.html"
+                    <a href="/arak"
                         class="bg-primary hover:bg-gray-700 text-white px-6 py-3 rounded-lg transition duration-300">Árak
                         megtekintése</a>
-                    <a href="contact.html"
+                    <a href="/atadas"
                         class="border-2 border-primary text-primary hover:bg-gray-100 px-6 py-3 rounded-lg transition duration-300">Átadási/felvételi
                         helyszín</a>
                 </div>
