FooterRe_PricesRe_ContactRe

--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,13 @@
             </div>
 
             <div>
-                <h2 class="text-2xl font-bold text-primary mb-6">Utasítások</h2>
+                <h2 class="text-2xl font-bold text-primary mb-6">Átadás menete</h2>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <ol class="space-y-4">
                         <li class="flex gap-3">
                             <span
                                 class="bg-amber-500 text-white rounded-full w-6 h-6 flex items-center justify-center flex-shrink-0">1</span>
-                            <span>Hozza el tárgyait munkaidőben</span>
+                            <span>Hozza el az élezendő tárgyakat nyitvatartási időben.</span>
                         </li>
                         <!--
                             <li class="flex gap-3">
@@ -84,12 +84,13 @@
                         <li class="flex gap-3">
                             <span
                                 class="bg-amber-500 text-white rounded-full w-6 h-6 flex items-center justify-center flex-shrink-0">2</span>
-                            <span>Kapjon egy becsült elkészülési időt</span>
+                            <span>Munkatársunk tájékoztatja a várható elkészülési időről.</span>
                         </li>
                         <li class="flex gap-3">
                             <span
                                 class="bg-amber-500 text-white rounded-full w-6 h-6 flex items-center justify-center flex-shrink-0">3</span>
-                            <span>Térjen vissza, hogy felvegye a kiélezett tárgyaidat</span>
+                            <span>Térjen vissza a munkatársunk által megadott időben, és vegye át az élezett
+                                eszközöket.</span>
                         </li>
                     </ol>
                     <div class="mt-6 bg-amber-50 p-4 rounded-lg border border-amber-100">
@@ -97,11 +98,11 @@
                             <div class="text-amber-500">
                                 <i data-feather="alert-triangle"></i>
                             </div>
-                            <p class="text-amber-800">Kérjük, győződjön meg arról, hogy minden tárgy tiszta és száraz,
-                                mielőtt leadja őket. Biztonsági okokból nem tudunk olyan tárgyakat elfogadni, amelyeknek
-                                laza fogantyúja van vagy súlyosan megrongálódtak.
+                            <p class="text-amber-800">Kérjük, hogy a tárgyak tisztán és szárazon legyenek leadva.
+                                Biztonsági okokból nem tudunk olyan eszközöket átvenni, amelyek sérültek, hiányosak,
+                                töröttek, repedtek vagy erősen szennyezettek.
                                 <br>
-                                <br>Törésért felelősséget nem tudok vállalni.
+                                <br>A törésekből, anyaghibákból eredő károkért felelősséget nem tudunk vállalni.
                             </p>
                         </div>
                     </div>
