--- a/prices.html
+++ b/prices.html
@@ -32,10 +32,10 @@
                         </div>
                         <p class="text-amber-800">
                             Áraink bruttó árak. Az élezendő eszközök átadási és átvételi pontja:
-                            Halásztelek, II. Rákóczi Ferenc út 54/C (papírbolt).
+                            2314 Halásztelek, II. Rákóczi Ferenc út 54/C (papírbolt).
                             <br><br>
                             Az élezést általában 24 órán belül, másnapra biztosítom.
-                            Kérdéseit várjuk az elezes.halasztelek@gmail.com címen.
+                            Kérdéseit várjuk az <b><i>elezes.halasztelek@gmail.com</i></b> címen.
                         </p>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="price-item px-6 py-3">
                         <span>Konyhakés</span>
-                        <span class="font-semibold">50 Ft/cm, minimum 600 Ft</span>
+                        <span class="font-semibold">50 Ft/cm, minimum 600 Ft értékben</span>
                     </div>
                     <div class="price-item px-6 py-3 bg-gray-50">
                         <span>Bicska, zsebkés</span>
